--- a/index.html
+++ b/index.html
@@ -97,9 +97,8 @@
             <p>&copy; 2024 Confeitaria Criativa. Todos os direitos reservados.</p>
         </div>
     </footer>
-
-    <script>
-      document.addEventListener('DOMContentLoaded', () => {
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
           const RECIPE_PAGE_URL = 'receita.html';
           const CATEGORY_PAGE_URL = 'categoria.html'; // Nova página de categoria
 
@@ -200,7 +199,7 @@
                   'Bombons e Trufas': 'gem',
                   'Biscoitos e Petit Fours': 'cookie',
                   'Caldas e Coberturas': 'blinds',
-                  'Cremes e Recheios': 'blender',
+                  'Cremes e Recheios': 'paintbrush',
                   'Doces Tradicionais': 'candlestick-chart',
                   'Massas Base': 'egg',
                   'Montagem e Decoração': 'paintbrush',
@@ -231,6 +230,6 @@
               lucide.createIcons();
           });
       });
-    </script>
+</script>
   </body>
 </html>
