--- a/receita.html
+++ b/receita.html
@@ -50,7 +50,7 @@
     <header class="bg-[var(--color-title)]/70 backdrop-blur-sm shadow-lg sticky top-0 z-20">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="text-2xl font-bold text-[var(--color-primary)]">
-                <a href="testedinamico.html">Confeitaria Criativa</a>
+                <a href="index.html">Confeitaria Criativa</a>
             </div>
             <div class="hidden md:flex space-x-6 items-center">
                 <a href="testedinamico.html#categorias" class="text-[var(--color-accent)] hover:text-[var(--color-primary)]">Categorias</a>
