--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-/*             height: 60vh !important;
- */        }
+            height: 60vh !important;
+        }
     </style>
 </head>
 <body>
@@ -96,7 +96,7 @@
             <!-- Seção 3: Todas as Categorias -->
             <section id="categorias" class="py-16 bg-[var(--color-title)]/60 rounded-2xl">
                 <h2 class="text-4xl font-bold text-center text-[var(--color-background-soft)] mb-12">Explore por Categoria</h2>
-                <div id="categories-grid" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6">
+                <div id="categories-grid" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-8">
                     <!-- Cards de categoria serão populados via JavaScript -->
                     <p class="text-center col-span-full">Carregando categorias...</p>
                 </div>
@@ -178,8 +178,7 @@
                   card.className = "block bg-[var(--color-accent)]/30 rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300";
                   
                   card.innerHTML = `
-                      <img src="${recipe.image}" alt="Foto de ${recipe.name}" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='        "image": "https://raw.githubusercontent.com/munizbruna/confeitaria/50b77e863fb2919a9f585ff7e0944e5b617db4c3/images/${recipe.name}.jpg",
-';">
+                      <img src="${recipe.image}" alt="Foto de ${recipe.name}" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/D9A679/260B01?text=Imagem+Indisponível';">
                       <div class="p-6">
                           <h3 class="text-2xl font-bold text-white mb-2">${recipe.name}</h3>
                           <div class="flex items-center text-sm text-[var(--color-background-soft)]">
@@ -228,7 +227,7 @@
                   const iconName = categoryIcons[category] || categoryIcons['default'];
                   const card = document.createElement('a');
                   card.href = `${CATEGORY_PAGE_URL}?category=${encodeURIComponent(category)}`;
-                  card.className = "block bg-[var(--color-accent)]/30 p-6 rounded-xl text-center shadow-md hover:shadow-xl hover:bg-[var(--color-accent)]/50 transition-all duration-300";
+                  card.className = "block bg-[var(--color-accent)]/60 p-6 rounded-xl text-center shadow-md transform hover:shadow-xl hover:bg-[var(--color-primary-dark)] hover:scale-105 transition-all duration-300";
                   card.innerHTML = `
                       <i data-lucide="${iconName}" class="w-12 h-12 mx-auto text-[var(--color-primary)] mb-4"></i>
                       <h3 class="font-semibold text-lg text-white">${category}</h3>
