--- a/receita.html
+++ b/receita.html
@@ -33,9 +33,10 @@
         /* Efeito Parallax */
         .parallax-container {
             background-attachment: fixed;
-            background-position: center;
+            background-position: bottom;
             background-repeat: no-repeat;
             background-size: 100%;
+            height: 50vh !important;
         }
         .backdrop-blur-md{
             --tw-backdrop-blur: blur(55px) !important;
