--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delícias da Cozinha - Suas Receitas Favoritas</title>
+    <title>Fouet de Casa - confeitaria acessível</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,12 +45,12 @@
     <header class="bg-[var(--color-title)]/70 backdrop-blur-sm shadow-lg sticky top-0 z-20">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="text-2xl font-bold text-[var(--color-primary)]">
-                <a href="#">Confeitaria Criativa</a>
+                <a href="#">Fouet de Casa</a>
             </div>
             <div class="hidden md:flex space-x-6 items-center">
                 <a href="#populares" class="text-[var(--color-accent)] hover:text-[var(--color-primary)]">Populares</a>
                 <a href="#categorias" class="text-[var(--color-accent)] hover:text-[var(--color-primary)]">Categorias</a>
-                <a href="#" class="bg-[var(--color-primary)] text-white px-4 py-2 rounded-full hover:bg-[var(--color-primary-dark)] transition-colors">Enviar Receita</a>
+                <a href="enviar.html" class="bg-[var(--color-primary)] text-white px-4 py-2 rounded-full hover:bg-[var(--color-primary-dark)] transition-colors">Enviar Receita</a>
             </div>
             <div class="md:hidden">
                 <button class="text-[var(--color-accent)] hover:text-[var(--color-primary)]">
@@ -66,9 +66,9 @@
             class="parallax-container h-[85vh] w-full flex items-center justify-center text-center text-white" 
             style="background-image: url('images/cozinha.jpg');">
             <div class="bg-white/70 p-8 rounded-lg max-w-5xl mx-auto">
-                <h1 class="text-5xl md:text-6xl font-bold text-[var(--color-title)] mb-4">O Sabor Encontra a Tradição</h1>
+                <h1 class="text-5xl md:text-6xl font-bold text-[var(--color-title)] mb-4">As melhores receitas na sua casa</h1>
                 <p class="text-lg text-[var(--color-title)] mb-8">
-                    Bem-vindo à Confeitaria Criativa! Aqui, compartilhamos receitas incríveis para todos os momentos. Explore nossos pratos, descubra novos sabores e inspire-se para cozinhar.
+                    Bem-vindo ao Fouet de Casa! Aqui, compartilhamos não só receitas da Confeitaria para todos os momentos, mas a inspiração para você cozinhar e arrasar.
                 </p>
                 <div class="relative inline-block max-w-sm w-full">
                     <select id="recipes-dropdown" class="w-full appearance-none bg-[var(--color-background-soft)]/80 border border-[var(--color-primary-dark)] text-[var(--color-title)] font-medium py-3 px-4 pr-8 rounded-full leading-tight focus:outline-none focus:bg-[var(--color-background-soft)] focus:border-[var(--color-primary)] focus:ring-2 focus:ring-[var(--color-primary-dark)] transition">
