tema claro e organizações

--- a/categoria.html
+++ b/categoria.html
@@ -12,26 +12,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/categoria.js" defer></script>
+    <script src="js/componentes.js"></script>
+
 </head>
 <body>
 
-    <!-- Cabeçalho -->
-    <header class="bg-[var(--color-title)]/70 backdrop-blur-sm shadow-lg sticky top-0 z-10">
-        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <div class="text-2xl font-bold text-[var(--color-primary)]">
-                <a href="testedinamico.html">Confeitaria Criativa</a>
-            </div>
-            <div class="hidden md:flex space-x-6 items-center">
-                <a href="testedinamico.html#categorias" class="text-[var(--color-accent)] hover:text-[var(--color-primary)]">Categorias</a>
-                <a href="#" class="bg-[var(--color-primary)] text-white px-4 py-2 rounded-full hover:bg-[var(--color-primary-dark)] transition-colors">Enviar Receita</a>
-            </div>
-            <div class="md:hidden">
-                <button class="text-[var(--color-accent)] hover:text-[var(--color-primary)]">
-                    <i data-lucide="menu"></i>
-                </button>
-            </div>
-        </nav>
-    </header>
+       <!-- O cabeçalho está agora DENTRO do container com a imagem de fundo -->
+       <header id="header-placeholder" class="bg-[var(--color-title)]/70 backdrop-blur-sm shadow-lg sticky top-0 z-20"></header>
 
     <main class="container mx-auto px-6 py-12">
         <!-- Seção da Categoria -->
