--- a/enviar.html
+++ b/enviar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enviar Receita - Confeitaria Criativa</title>
@@ -8,166 +9,105 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Playfair+Display:wght@700&display=swap"
-      rel="stylesheet"
-    />
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Playfair+Display:wght@700&display=swap"
+        rel="stylesheet" />
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js" defer></script>
-  </head>
-  <body>
-    <header
-      class="bg-[var(--color-title)]/70 backdrop-blur-sm shadow-lg sticky top-0 z-20"
-    >
-      <nav
-        class="container mx-auto px-6 py-4 flex justify-between items-center"
-      >
-        <div class="text-2xl font-bold text-[var(--color-primary)]">
-          <a href="index.html">Confeitaria Criativa</a>
-        </div>
-        <div class="hidden md:flex space-x-6 items-center">
-          <a
-            href="index.html#categorias"
-            class="text-[var(--color-accent)] hover:text-[var(--color-primary)]"
-            >Categorias</a
-          >
-          <a
-            href="#"
-            class="bg-[var(--color-primary)] text-white px-4 py-2 rounded-full hover:bg-[var(--color-primary-dark)] transition-colors"
-            >Enviar Receita</a
-          >
-        </div>
-        <div class="md:hidden">
-          <button
-            class="text-[var(--color-accent)] hover:text-[var(--color-primary)]"
-          >
-            <i data-lucide="menu"></i>
-          </button>
-        </div>
-      </nav>
-    </header>
+    <script src="js/componentes.js"></script>
+
+</head>
+
+<body>
+        <!-- O cabeçalho está agora DENTRO do container com a imagem de fundo -->
+        <header id="header-placeholder" class="bg-[var(--color-title)]/70 backdrop-blur-sm shadow-lg sticky top-0 z-20"></header>
 
     <main class="container mx-auto px-6 py-12">
-      <div
-        class="max-w-4xl mx-auto bg-[var(--color-accent)]/60 backdrop-blur-md p-8 rounded-2xl shadow-lg"
-      >
-        <h1 class="text-5xl font-bold text-center text-white mb-8">
-          Enviar Nova Receita
-        </h1>
-        <form id="recipe-form" class="space-y-6">
-          <div class="bg-[var(--color-title)]/50 p-6 rounded-xl">
-            <h2 class="text-2xl font-bold mb-4">Informações da Receita</h2>
-            <div>
-              <label for="recipe-name" class="form-label"
-                >Nome da Receita</label
-              >
-              <input type="text" id="recipe-name" class="form-input" required />
-            </div>
-            <div>
-              <label for="recipe-category" class="form-label">Categoria</label>
-              <select id="recipe-category" class="form-input" required>
-                <option value="">Selecione uma categoria...</option>
-              </select>
-            </div>
-            <div>
-              <label for="recipe-image" class="form-label"
-                >Link da Imagem</label
-              >
-              <input
-                type="url"
-                id="recipe-image"
-                class="form-input"
-                placeholder="Ex: https://link-da-imagem.jpg"
-              />
-            </div>
-            <div>
-              <label for="recipe-description" class="form-label"
-                >Descrição / Observações</label
-              >
-              <textarea
-                id="recipe-description"
-                class="form-input"
-                rows="3"
-              ></textarea>
-            </div>
-          </div>
-
-          <div class="bg-[var(--color-title)]/50 p-6 rounded-xl">
-            <h2 class="text-2xl font-bold mb-4">Ingredientes</h2>
-            <div id="ingredients-container" class="space-y-4">
-              <div class="flex space-x-4">
-                <div class="w-2/3">
-                  <label class="form-label">Nome do Ingrediente</label>
-                  <input
-                    type="text"
-                    class="ingredient-name form-input"
-                    placeholder="Farinha de trigo"
-                  />
+        <div class="max-w-4xl mx-auto bg-[var(--color-accent)]/60 backdrop-blur-md p-8 rounded-2xl shadow-lg">
+            <h1 class="text-5xl font-bold text-center text-[var(--color-title)] mb-8">
+                Enviar Nova Receita
+            </h1>
+            <form id="recipe-form" class="space-y-6">
+                <div class="bg-[var(--color-title)]/50 p-6 rounded-xl">
+                    <h2 class="text-2xl font-bold mb-4">Informações da Receita</h2>
+                    <div>
+                        <label for="recipe-name" class="form-label">Nome da Receita</label>
+                        <input type="text" id="recipe-name" class="form-input" required />
+                    </div>
+                    <div>
+                        <label for="recipe-category" class="form-label">Categoria</label>
+                        <select id="recipe-category" class="form-input" required>
+                            <option value="">Selecione uma categoria...</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="recipe-image" class="form-label">Link da Imagem</label>
+                        <input type="url" id="recipe-image" class="form-input"
+                            placeholder="Ex: https://link-da-imagem.jpg" />
+                    </div>
+                    <div>
+                        <label for="recipe-description" class="form-label">Descrição / Observações</label>
+                        <textarea id="recipe-description" class="form-input" rows="3"></textarea>
+                    </div>
                 </div>
-                <div class="w-1/3">
-                  <label class="form-label">Porcentagem (%)</label>
-                  <input
-                    type="number"
-                    step="0.1"
-                    class="ingredient-percentage form-input"
-                    placeholder="50.0"
-                  />
+
+                <div class="bg-[var(--color-title)]/50 p-6 rounded-xl">
+                    <h2 class="text-2xl font-bold mb-4">Ingredientes</h2>
+                    <div id="ingredients-container" class="space-y-4">
+                        <div class="flex space-x-4">
+                            <div class="w-2/3">
+                                <label class="form-label">Nome do Ingrediente</label>
+                                <input type="text" class="ingredient-name form-input" placeholder="Farinha de trigo" />
+                            </div>
+                            <div class="w-1/3">
+                                <label class="form-label">Porcentagem (%)</label>
+                                <input type="number" step="0.1" class="ingredient-percentage form-input"
+                                    placeholder="50.0" />
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" id="add-ingredient-btn"
+                        class="mt-4 w-full bg-transparent border border-[var(--color-primary)] text-[var(--color-primary)] px-4 py-2 rounded-lg hover:bg-[var(--color-primary)] hover:text-white transition-colors">
+                        Adicionar Ingrediente
+                    </button>
                 </div>
-              </div>
-            </div>
-            <button
-              type="button"
-              id="add-ingredient-btn"
-              class="mt-4 w-full bg-transparent border border-[var(--color-primary)] text-[var(--color-primary)] px-4 py-2 rounded-lg hover:bg-[var(--color-primary)] hover:text-white transition-colors"
-            >
-              Adicionar Ingrediente
-            </button>
-          </div>
 
-          <div class="bg-[var(--color-title)]/50 p-6 rounded-xl">
-            <h2 class="text-2xl font-bold mb-4">Modo de Preparo</h2>
-            <div id="method-container" class="space-y-4">
-              <div>
-                <label class="form-label">Passo 1</label>
-                <textarea class="method-step form-input" rows="2"></textarea>
-              </div>
-            </div>
-            <button
-              type="button"
-              id="add-method-btn"
-              class="mt-4 w-full bg-transparent border border-[var(--color-primary)] text-[var(--color-primary)] px-4 py-2 rounded-lg hover:bg-[var(--color-primary)] hover:text-white transition-colors"
-            >
-              Adicionar Passo
-            </button>
-          </div>
+                <div class="bg-[var(--color-title)]/50 p-6 rounded-xl">
+                    <h2 class="text-2xl font-bold mb-4">Modo de Preparo</h2>
+                    <div id="method-container" class="space-y-4">
+                        <div>
+                            <label class="form-label">Passo 1</label>
+                            <textarea class="method-step form-input" rows="2"></textarea>
+                        </div>
+                    </div>
+                    <button type="button" id="add-method-btn"
+                        class="mt-4 w-full bg-transparent border border-[var(--color-primary)] text-[var(--color-primary)] px-4 py-2 rounded-lg hover:bg-[var(--color-primary)] hover:text-white transition-colors">
+                        Adicionar Passo
+                    </button>
+                </div>
 
-          <div class="text-center">
-            <button type="submit" class="btn-primary">
-              Gerar Receita JSON
-            </button>
-          </div>
+                <div class="text-center">
+                    <button type="submit" class="btn-primary">
+                        Gerar Receita JSON
+                    </button>
+                </div>
 
-          <div id="result-area" class="mt-8 hidden">
-            <h3 class="text-2xl font-bold mb-4">Receita Gerada em JSON</h3>
-            <p class="text-[var(--color-background-soft)] mb-4">
-              Copie o conteúdo abaixo e adicione ao seu arquivo `receitas.json`.
-            </p>
-            <textarea
-              id="json-output"
-              class="form-input w-full h-64 text-sm"
-              readonly
-            ></textarea>
-          </div>
-        </form>
-      </div>
+                <div id="result-area" class="mt-8 hidden">
+                    <h3 class="text-2xl font-bold mb-4">Receita Gerada em JSON</h3>
+                    <p class="text-[var(--color-background-soft)] mb-4">
+                        Copie o conteúdo abaixo e adicione ao seu arquivo `receitas.json`.
+                    </p>
+                    <textarea id="json-output" class="form-input w-full h-64 text-sm" readonly></textarea>
+                </div>
+            </form>
+        </div>
     </main>
 
-    <footer
-      class="bg-[var(--color-title)]/80 text-[var(--color-background-soft)] mt-16"
-    >
-      <div class="container mx-auto px-6 py-8 text-center">
-        <p>&copy; 2024 Confeitaria Criativa. Todos os direitos reservados.</p>
-      </div>
+    <footer class="bg-[var(--color-title)]/80 text-[var(--color-background-soft)] mt-16">
+        <div class="container mx-auto px-6 py-8 text-center">
+            <p>&copy; 2024 Confeitaria Criativa. Todos os direitos reservados.</p>
+        </div>
     </footer>
-  </body>
+</body>
+
 </html>
