enviar com script

--- a/enviar.html
+++ b/enviar.html
@@ -14,7 +14,9 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js" defer></script>
-    <script src="js/componentes.js"></script>
+    <script src="js/componentes.js" defer></script>
+    <script src="js/enviar.js" defer></script>
+
 
 </head>
 
