refatoração: ajuste de endpoints da API e melhorias na lógica de envio de receitas

--- a/enviar.html
+++ b/enviar.html
@@ -13,7 +13,6 @@
         rel="stylesheet" />
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script.js" defer></script>
     <script src="js/componentes.js" defer></script>
     <script src="js/enviar.js" defer></script>
 
@@ -89,7 +88,7 @@
                 </div>
 
                 <div class="text-center">
-                    <button type="submit" class="btn-primary">
+                    <button id="submit-button" type="submit" class="btn-primary">
                         Gerar Receita JSON
                     </button>
                 </div>
