--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     <main>
         <div class="container mx-auto px-6 py-12">
             <!-- Seção de Receitas Populares -->
-            <section id="populares" class="py-16">
+            <!-- <section id="populares" class="py-16">
                 <h2 class="text-4xl font-bold text-center text-[var(--color-background-soft)] mb-12">Receitas Populares</h2>
                 <div id="popular-recipes-grid" class="grid grid-cols-1 sm-grid-cols-2 lg:grid-cols-4 gap-8">
                     <p class="text-center col-span-full">Carregando receitas...</p>
                 </div>
-            </section>
+            </section> -->
 
             <!-- Seção de Categorias -->
             <section id="categorias" class="py-16 bg-[var(--color-title)]/60 rounded-2xl">
